v4.5.1
  * Adjust "when" value parsing to handle YYYY-MM-DD consistently

v4.5.0
  * Drop support for python <3.10
  * Add `init` command to explicitly request auth setup/refresh
  * Improve auth issue handling and error messaging or invalid OAuth token
    issues (adrien-n)
  * Respect locally-installed certificates (ajkessel)
  * Re-add a `--noauth_local_server` to provide instructions for authenticating
    from a remote system using port forwarding
  * Add support for config.toml file and `gcalcli config edit` command
  * Behavior change: `--noincluderc` now skips gcalclirc files unconditionally,
    w/ or w/o --config-folder
    - POSSIBLE ACTION REQUIRED: Use `@path/to/gcalclirc` explicitly if it stops
      reading an rc file you needed
  * Migrate data files like ~/.gcalcli_oauth into standard data file paths
    (with fallback to migrate detected files into the new paths)
  * Add support for $GCALCLI_CONFIG env var and deprecate --config-folder
  * Add support for `gcalcli util config-schema|reset-cache|inspect-auth`
    commands
  * Fix parsing for calendar names containing '#'
  * `add` and similar commands determine date format to use based on system
    locale's in "When" inputs
  * `add` with `--default-reminders` won't prompt for additional reminders
  * Fix `import` crashing on empty ICS files
  * `import` can also handle events w/o a dtend, using duration if available
  * The `import` command now dumps events it couldn't import into a tmp rej.ics
    file in a tmp directory for convenient retries

v4.4.0
  * Fix lots of bugs by switching from deprecated oauth2client to
    google_auth_oauthlib
  * Friendlier help output when `import` command is missing vobject extra
  * `import` command more gracefully handles existing events to avoid duplicates
    and unnecessary edits (tsheinen, cryhot)
  * Handle encoding/decoding errors more gracefully by replacing with
    placeholder chars instead of blowing up