@@ -1,4 +1,5 @@
 v4.5.1
+  * Fix bizarre SSL recursion errors by moving truststore init earlier
   * Adjust "when" value parsing to handle YYYY-MM-DD consistently
 
 v4.5.0
